--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@angular/router": "^15.2.0",
     "@types/node": "^20.1.2",
     "bootstrap": "^5.3.0-alpha3",
+    "json-server": "^0.17.3",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
